[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "adv_mla_2025"
version = "0.0.1"
description = "Online News"
authors = [
  { name = "Monika Shakya" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "jupyterlab (>=4.2.3)",
    "pandas (==2.2.2)",
    "scikit-learn (==1.5.1)",
    "my-krml-25548660 (>=0.1.4,<0.2.0)",
]
requires-python = "==3.11.4"


[tool.ruff]
line-length = 99
src = ["adv_mla_2025"]
include = ["pyproject.toml", "adv_mla_2025/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["adv_mla_2025"]
force-sort-within-sections = true

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"


[tool.poetry.dependencies]
my-krml-25548660 = {source = "testpypi"}
